package.json modified

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ticket-app",
   "version": "0.1.0",
+  "author": "Nandier Ruiz Acosta",
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
